--- a/package.json
+++ b/package.json
@@ -14,7 +14,9 @@
   "description": "",
   "dependencies": {
     "@pythnetwork/hermes-client": "^2.0.0",
-    "bn.js": "^5.2.2"
+    "bn.js": "^5.2.2",
+    "dotenv": "^16.5.0",
+    "ethers": "^6.14.4"
   },
   "devDependencies": {
     "@types/bn.js": "^5.2.0",
